# gnss-sdr

src/algorithms/: CMakeLists.txt
src/algorithms/acquisition/gnuradio_blocks/: pcps_opencl_acquisition_cc.h
src/algorithms/channel/adapters/: channel.cc  channel.h
src/algorithms/channel/libs/: channel_fsm.cc  channel_fsm.h  channel_msg_receiver_cc.cc
src/algorithms/libs/: fft_setup.cc
src/algorithms/passive_radar/: CMakeLists.txt  passive_radar.cc
src/algorithms/passive_radar/adapters/: CMakeLists.txt  passive_radar.cc  passive_radar.h
src/algorithms/passive_radar/gnuradio_blocks/: #passive_radar_cc.cc#  CMakeLists.txt  passive_radar_cc.cc  passive_radar_cc.h  passive_radar_сс.cc
src/algorithms/resampler/gnuradio_blocks/: direct_resampler_conditioner_cc.cc  direct_resampler_conditioner_cc.h
src/algorithms/telemetry_decoder/gnuradio_blocks/: CMakeLists.txt  gps_l1_ca_telemetry_decoder_cc.cc  gps_l1_ca_telemetry_decoder_cc.h
src/algorithms/telemetry_decoder/libs/: CMakeLists.txt
src/algorithms/tracking/: CMakeLists.txt
src/algorithms/tracking/adapters/: CMakeLists.txt  gps_l1_ca_dll_pll_tracking_pr.cc  gps_l1_ca_dll_pll_tracking_pr.h
src/algorithms/tracking/gnuradio_blocks/: CMakeLists.txt  gps_l1_ca_dll_pll_tracking_cc_pr.cc  gps_l1_ca_dll_pll_tracking_cc_pr.h
src/algorithms/tracking/libs/: CMakeLists.txt  cpu_multicorrelator.cc  cpu_multicorrelator.h  recovery_kernel.cc  recovery_kernel.h
src/core/interfaces/: channel_interface.h  passive_radar_interface.h  tracking_interface.h
src/core/receiver/: CMakeLists.txt  gnss_block_factory.cc  gnss_block_factory.h  gnss_flowgraph.cc  gnss_flowgraph.h
src/core/system_parameters/: GPS_L1_CA.h
src/tests/: CMakeLists.txt  test_main.cc
src/tests/unit-tests/signal-processing-blocks/passive_radar/: test_passive_radar.cc
